--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
     "lottie-react": "^2.4.0",
+    "mongoose": "^8.0.3",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.0.4",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2"
   },
