--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,14 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "npm install"
   },
-  "author": "",
+  "author": "abiram",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
+    "mongoose": "^8.0.4",
     "nodemon": "^3.0.2"
   },
   "description": ""
