changed localhost to server deployed link

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,3 @@
-
-GOOGLE_CLIENT_ID= 98461127745-p2v3reqv864qkc2k7a0bauppbmmtqrhl.apps.googleusercontent.com
-
-GOOGLE_CLIENT_SECRET= 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
+PORT = https://globel-chat-server.onrender.com
 
 MONGODB_URI= mongodb+srv://abiiRam:abii%40mongoDB002@abii.dgatpri.mongodb.net/?retryWrites=true&w=majority
