modified server page for production

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,5 @@
 PORT = https://globel-chat-server.onrender.com
 
+CLIENT = https://cool-zabaione-f75566.netlify.app
+
 MONGODB_URI= mongodb+srv://abiiRam:abii%40mongoDB002@abii.dgatpri.mongodb.net/?retryWrites=true&w=majority
